# kokoro_test

./: main.py  pyproject.toml
demo/: app.py  requirements.txt
kokoro/: __init__.py  pipeline.py
