[project]
name = "kokoro-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attr>=0.3.2",
    "espeakng-loader>=0.2.4",
    "gradio>=5.49.1",
    "huggingface>=0.0.1",
    "loguru>=0.7.3",
    "misaki>=0.9.4",
    "num2words>=0.5.14",
    "phonemizer>=3.3.0",
    "pip>=25.2",
    "spacy>=3.8.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
